--- a/src/main/resources/screens/Home.fxml
+++ b/src/main/resources/screens/Home.fxml
@@ -1,6 +1,56 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.VBox?>
 
+<BorderPane fx:id="root" nodeOrientation="LEFT_TO_RIGHT" prefHeight="400.0" prefWidth="673.0" stylesheets="@./style/Home.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+    <top>
+        <ImageView fitHeight="281.0" fitWidth="341.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
+            <image>
+                <Image url="@../images/Logo.png" />
+            </image>
+            <BorderPane.margin>
+                <Insets bottom="50.0" top="50.0" />
+            </BorderPane.margin>
+        </ImageView>
+    </top>
+    <center>
+        <AnchorPane prefHeight="264.0" prefWidth="673.0" BorderPane.alignment="CENTER">
+            <children>
+                <VBox id="mainVbox" fx:id="mainVbox" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" prefHeight="200.0" prefWidth="100.0" spacing="25.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="0.0">
+                    <children>
+                        <Button id="Button" fx:id="textPlay" mnemonicParsing="false" text="Gioca">
+                            <VBox.margin>
+                                <Insets />
+                            </VBox.margin>
+                        </Button>
+                        <Button id="Button" fx:id="textSettings" mnemonicParsing="false" text="Impostazioni">
+                            <VBox.margin>
+                                <Insets />
+                            </VBox.margin>
+                        </Button>
+                        <Button id="Button" fx:id="textStats" mnemonicParsing="false" text="Statistiche">
+                            <VBox.margin>
+                                <Insets />
+                            </VBox.margin>
+                        </Button>
+                        <Button id="Button" fx:id="textExit" mnemonicParsing="false" text="Esci">
+                            <VBox.margin>
+                                <Insets bottom="25.0" />
+                            </VBox.margin>
+                        </Button>
+                    </children>
+                    <padding>
+                        <Insets bottom="25.0" left="25.0" right="25.0" top="25.0" />
+                    </padding>
+                </VBox>
+            </children>
+        </AnchorPane>
+    </center>
 
-<BorderPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="700.0" style="-fx-background-color: #ff0000;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" />
+</BorderPane>
