--- a/src/main/resources/screens/style/Home.css
+++ b/src/main/resources/screens/style/Home.css
@@ -9,8 +9,8 @@
 
 #Button {
     -fx-padding: 8 15 15 15;
-    -fx-background-insets: 0, 0 0 5 0, 0 0 6 0, 0 0 7 0;
-    -fx-background-radius: 8;
+    -fx-background-insets: 0, 0, 0 0 9 0, 0 0 10 0;
+    -fx-background-radius: 10;
     -fx-background-color: linear-gradient(from 0% 93% to 0% 100%, #a34313 0%, #903b12 100%),
     #9d4024,
     #d86e3a,
