--- a/src/main/resources/screens/Home.fxml
+++ b/src/main/resources/screens/Home.fxml
@@ -12,9 +12,9 @@
 
 <BorderPane fx:id="root" minHeight="800.0" minWidth="700.0" nodeOrientation="LEFT_TO_RIGHT" stylesheets="@style/Home.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
     <center>
-        <AnchorPane fx:id="mainAnchorPane" maxHeight="450.0" BorderPane.alignment="TOP_CENTER">
+        <AnchorPane fx:id="mainAnchorPane" maxHeight="450.0" maxWidth="450.0" BorderPane.alignment="TOP_CENTER">
             <children>
-            <GridPane id="gridPane" fx:id="mainGridPane" alignment="CENTER" hgap="10.0" vgap="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="150.0" AnchorPane.rightAnchor="150.0" AnchorPane.topAnchor="50.0">
+            <GridPane id="gridPane" fx:id="mainGridPane" alignment="CENTER" hgap="10.0" vgap="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="50.0">
               <columnConstraints>
                 <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="1.7976931348623157E308" percentWidth="100.0" />
               </columnConstraints>
