--- a/src/main/resources/screens/Game.fxml
+++ b/src/main/resources/screens/Game.fxml
@@ -1,10 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.canvas.Canvas?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
 
-<BorderPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane fx:id="root" minHeight="800.0" minWidth="700.0" stylesheets="@style/Game.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <center>
-      <Canvas fx:id="canvas" height="600.0" width="600.0" BorderPane.alignment="CENTER" />
+      <Canvas fx:id="canvas" height="600.0" width="700.0" BorderPane.alignment="CENTER" />
    </center>
+   <bottom>
+      <HBox alignment="CENTER" spacing="20.0" BorderPane.alignment="CENTER">
+         <children>
+            <Button id="Button" fx:id="buttonStart" mnemonicParsing="false" />
+         </children>
+         <padding>
+            <Insets bottom="10.0" />
+         </padding>
+      </HBox>
+   </bottom>
+   <top>
+      <BorderPane BorderPane.alignment="CENTER">
+         <left>
+            <Button id="Button" fx:id="buttonBack" mnemonicParsing="false" BorderPane.alignment="CENTER" />
+         </left>
+         <top>
+            <Label id="LevelTitle" fx:id="labelTitle" text="Level" BorderPane.alignment="CENTER" />
+         </top>
+         <BorderPane.margin>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </BorderPane.margin>
+      </BorderPane>
+   </top>
 </BorderPane>
