remove shadow fixing lag on less powerful systems

--- a/src/main/resources/screens/style/Game.css
+++ b/src/main/resources/screens/style/Game.css
@@ -58,5 +58,5 @@
     #9d4024,
     #d86e3a,
     radial-gradient(center 50% 50%, radius 100%, #d86e3a, #c54e2c);
-    -fx-effect: dropshadow(two-pass-box, black, 20, 0.1, 0, 0);
+    /*-fx-effect: dropshadow(two-pass-box, black, 20, 0.1, 0, 0);*/
 }
