--- a/src/main/resources/screens/style/Game.css
+++ b/src/main/resources/screens/style/Game.css
@@ -49,8 +49,7 @@
 }
 
 #canvasStack {
-    -fx-background-image: url("/images/background.jpg");
-    -fx-background-radius: 5;
+    -fx-background-image: url("/images/backgroundHorny.png");
     -fx-border-insets: 2 0 0 0, 3 0 0 0, 0 0 2 0, 0 0 3 0;
     -fx-border-width: 5;
     -fx-border-radius: 10;
