--- a/src/main/resources/screens/Settings.fxml
+++ b/src/main/resources/screens/Settings.fxml
@@ -2,25 +2,37 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Slider?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.*?>
-<BorderPane fx:id="root" minHeight="800.0" minWidth="700.0" nodeOrientation="LEFT_TO_RIGHT"
-            stylesheets="@style/Settings.css" xmlns="http://javafx.com/javafx/8.0.171"
-            xmlns:fx="http://javafx.com/fxml/1">
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.VBox?>
+
+<BorderPane fx:id="root" minHeight="800.0" minWidth="700.0" nodeOrientation="LEFT_TO_RIGHT" stylesheets="@style/Settings.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
     <center>
         <AnchorPane fx:id="mainAnchorPane" maxHeight="450.0" maxWidth="450.0" BorderPane.alignment="TOP_CENTER">
-        </AnchorPane>
+         <children>
+            <VBox alignment="CENTER" layoutX="146.0" layoutY="125.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+               <children>
+                  <Label text="Volume" textFill="WHITE" />
+                  <Slider prefHeight="52.0" prefWidth="450.0" showTickMarks="true" />
+                  <Label text="Difficulty" textFill="WHITE" />
+                  <Slider showTickLabels="true" />
+               </children>
+            </VBox>
+         </children></AnchorPane>
     </center>
     <top>
         <BorderPane minHeight="200.0" BorderPane.alignment="CENTER">
             <BorderPane.margin>
-                <Insets/>
+                <Insets />
             </BorderPane.margin>
             <center>
                 <ImageView fitHeight="200.0" fitWidth="500.0" pickOnBounds="true" preserveRatio="true">
                     <image>
-                        <Image url="@../images/Logo.png"/>
+                        <Image url="@../images/Logo.png" />
                     </image>
                 </ImageView>
             </center>
@@ -29,7 +41,7 @@
     <bottom>
         <Button id="Button" fx:id="buttonBack" mnemonicParsing="false" text="Back" BorderPane.alignment="CENTER">
             <BorderPane.margin>
-                <Insets bottom="20.0"/>
+                <Insets bottom="20.0" />
             </BorderPane.margin>
         </Button>
     </bottom>
