Adding settings color and style

--- a/src/main/resources/screens/Settings.fxml
+++ b/src/main/resources/screens/Settings.fxml
@@ -17,9 +17,9 @@
             <VBox alignment="CENTER" layoutX="146.0" layoutY="125.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
                   <Label text="Volume" textFill="WHITE" />
-                  <Slider prefHeight="52.0" prefWidth="450.0" showTickMarks="true" />
+                  <Slider fx:id="volumeSlider" blockIncrement="0.1" majorTickUnit="0.01" max="1.0" min="0.1" minorTickCount="0" prefHeight="52.0" prefWidth="450.0" showTickMarks="true" />
                   <Label text="Difficulty" textFill="WHITE" />
-                  <Slider showTickLabels="true" />
+                  <Slider fx:id="diffSlider" blockIncrement="50.0" majorTickUnit="1.0" max="3.0" min="1.0" minorTickCount="0" showTickLabels="true" snapToTicks="true" value="1.0" />
                </children>
             </VBox>
          </children></AnchorPane>
