--- a/src/main/resources/screens/Lobby.fxml
+++ b/src/main/resources/screens/Lobby.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.SplitMenuButton?>
@@ -9,6 +10,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <BorderPane fx:id="root" minHeight="800.0" minWidth="700.0" nodeOrientation="LEFT_TO_RIGHT" stylesheets="@style/Lobby.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
@@ -31,33 +33,6 @@
          <center>
             <ListView id="listPlayerView" fx:id="listPlayer" prefHeight="313.0" prefWidth="2.0" BorderPane.alignment="CENTER" />
          </center>
-         <top>
-            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="15.0" BorderPane.alignment="CENTER">
-               <children>
-                  <SplitMenuButton id="DropMenu" fx:id="dropMenuSkin" mnemonicParsing="false" text="Skin" textFill="#c8c2da">
-                    <items>
-                      <MenuItem mnemonicParsing="false" text="Action 1" />
-                      <MenuItem mnemonicParsing="false" text="Action 2" />
-                    </items>
-                  </SplitMenuButton>
-                  <SplitMenuButton id="DropMenu" fx:id="dropMenuDifficult" mnemonicParsing="false" text="Diffuculties" textFill="#c8c2da">
-                    <items>
-                      <MenuItem mnemonicParsing="false" text="Action 1" />
-                      <MenuItem mnemonicParsing="false" text="Action 2" />
-                    </items>
-                     <font>
-                        <Font size="11.0" />
-                     </font>
-                  </SplitMenuButton>
-                  <SplitMenuButton id="DropMenu" fx:id="dropMenuLevel" mnemonicParsing="false" text="Level" textFill="#c8c2da">
-                     <items>
-                        <MenuItem mnemonicParsing="false" text="Action 1" />
-                        <MenuItem mnemonicParsing="false" text="Action 2" />
-                     </items>
-                  </SplitMenuButton>
-               </children>
-            </HBox>
-         </top>
          <bottom>
             <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                <children>
@@ -65,6 +40,46 @@
                </children>
             </HBox>
          </bottom>
+         <top>
+            <VBox BorderPane.alignment="CENTER">
+               <children>
+                  <HBox alignment="CENTER" spacing="15.0">
+                     <children>
+                        <SplitMenuButton id="DropMenu" fx:id="dropMenuSkin" mnemonicParsing="false" text="Skin" textFill="#c8c2da">
+                          <items>
+                            <MenuItem mnemonicParsing="false" text="Action 1" />
+                            <MenuItem mnemonicParsing="false" text="Action 2" />
+                          </items>
+                        </SplitMenuButton>
+                        <SplitMenuButton id="DropMenu" fx:id="dropMenuDifficult" mnemonicParsing="false" text="Diffuculties" textFill="#c8c2da">
+                          <items>
+                            <MenuItem mnemonicParsing="false" text="Action 1" />
+                            <MenuItem mnemonicParsing="false" text="Action 2" />
+                          </items>
+                           <font>
+                              <Font size="11.0" />
+                           </font>
+                        </SplitMenuButton>
+                        <SplitMenuButton id="DropMenu" fx:id="dropMenuLevel" mnemonicParsing="false" text="Level" textFill="#c8c2da">
+                           <items>
+                              <MenuItem mnemonicParsing="false" text="Action 1" />
+                              <MenuItem mnemonicParsing="false" text="Action 2" />
+                           </items>
+                        </SplitMenuButton>
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER" fillHeight="false" spacing="50.0" VBox.vgrow="NEVER">
+                     <children>
+                        <Label id="IP" fx:id="ipLabel" text="IP:" />
+                        <Label id="Port" fx:id="portLabel" text="Port:" />
+                     </children>
+                     <padding>
+                        <Insets bottom="15.0" top="15.0" />
+                     </padding>
+                  </HBox>
+               </children>
+            </VBox>
+         </top>
       </BorderPane>
    </center>
    <bottom>
