--- a/src/main/resources/screens/ModeSelection.fxml
+++ b/src/main/resources/screens/ModeSelection.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -9,7 +10,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane fx:id="root" minHeight="800.0" minWidth="700.0" nodeOrientation="LEFT_TO_RIGHT" stylesheets="@style/ModeSelection.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane fx:id="root" minHeight="800.0" minWidth="700.0" nodeOrientation="LEFT_TO_RIGHT" stylesheets="@style/ModeSelection.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
     <center>
         <AnchorPane fx:id="mainAnchorPane" maxHeight="450.0" maxWidth="450.0" stylesheets="@style/Lobby.css" BorderPane.alignment="TOP_CENTER">
          <children>
@@ -17,17 +18,23 @@
                <children>
                   <Button id="Button" fx:id="buttonHost" mnemonicParsing="false" text="Host lobby">
                      <VBox.margin>
-                        <Insets bottom="50.0" />
+                        <Insets bottom="25.0" />
                      </VBox.margin></Button>
                   <Button id="Button" fx:id="buttonJoin" disable="true" mnemonicParsing="false" text="Join lobby">
                      <VBox.margin>
                         <Insets bottom="15.0" />
                      </VBox.margin></Button>
-                  <TextField fx:id="ipTextField" alignment="CENTER" nodeOrientation="LEFT_TO_RIGHT" prefHeight="68.0" prefWidth="420.0">
+                  <Label text="IP" textFill="#0a64a5" />
+                  <TextField id="TextField" fx:id="ipTextField" alignment="CENTER" nodeOrientation="LEFT_TO_RIGHT">
                      <VBox.margin>
-                        <Insets left="50.0" right="50.0" top="15.0" />
+                        <Insets left="50.0" right="50.0" top="5.0" />
                      </VBox.margin>
                   </TextField>
+                  <Label text="Port" textFill="#0a64a5" />
+                  <TextField id="TextField" fx:id="portTextField" alignment="CENTER" nodeOrientation="LEFT_TO_RIGHT">
+                     <VBox.margin>
+                        <Insets left="50.0" right="50.0" top="5.0" />
+                     </VBox.margin></TextField>
                </children>
             </VBox>
          </children></AnchorPane>
