--- a/src/main/resources/screens/Settings.fxml
+++ b/src/main/resources/screens/Settings.fxml
@@ -4,13 +4,14 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Slider?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane fx:id="root" minHeight="800.0" minWidth="700.0" nodeOrientation="LEFT_TO_RIGHT" stylesheets="@style/Settings.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane fx:id="root" minHeight="800.0" minWidth="700.0" nodeOrientation="LEFT_TO_RIGHT" stylesheets="@style/Settings.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
     <center>
         <AnchorPane fx:id="mainAnchorPane" maxHeight="450.0" maxWidth="450.0" BorderPane.alignment="TOP_CENTER">
          <children>
@@ -20,6 +21,8 @@
                   <Slider fx:id="volumeSlider" blockIncrement="0.0" majorTickUnit="0.01" max="1.0" min="0.01" minorTickCount="0" prefHeight="52.0" prefWidth="450.0" showTickMarks="true" value="0.01" />
                   <Label text="Difficulty" textFill="WHITE" />
                   <Slider fx:id="diffSlider" blockIncrement="0.0" majorTickUnit="1.0" max="3.0" min="1.0" minorTickCount="0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="1.0" />
+                  <Label text="Player name" textFill="WHITE" />
+                  <TextField id="TextField" fx:id="textPlayerName" />
                </children>
             </VBox>
          </children></AnchorPane>
