--- a/src/main/resources/screens/style/Settings.css
+++ b/src/main/resources/screens/style/Settings.css
@@ -59,3 +59,21 @@
 .slider .thumb:pressed {
     -fx-background-color: #ea7f4b;
 }
+
+#TextField {
+
+    -fx-border-color: #22374b;
+    -fx-border-width: 5px;
+    -fx-text-fill: #97b3ce;
+    -fx-font-size: 30px;
+    -fx-background-insets: 1 0 1 1, 1 0 1 1, 3 2 3 3;
+    -fx-background-radius: 2 0 0 2, 1 0 0 1, 0;
+
+}
+
+
+#TextField:focused {
+    -fx-border-color: #2e5276;
+    -fx-border-width: 7px;
+}
+
