add score support and show in view

--- a/src/main/resources/screens/style/Game.css
+++ b/src/main/resources/screens/style/Game.css
@@ -48,6 +48,16 @@
     radial-gradient(center 50% 50%, radius 100%, #d86e3a, #c54e2c);
 }
 
+#ScoreTitle {
+    -fx-padding: 8 15 15 15;
+    -fx-background-insets: 0, 0, 0 0 3 0, 0 0 4 0;
+    -fx-background-radius: 10;
+    -fx-background-color: linear-gradient(from 0% 93% to 0% 100%, #a34313 0%, #903b12 100%),
+    #9d4024,
+    #d86e3a,
+    radial-gradient(center 50% 50%, radius 100%, #d86e3a, #c54e2c);
+}
+
 #canvasStack {
     -fx-background-image: url("/images/backgroundHorny.png");
     -fx-border-insets: 2 0 0 0, 3 0 0 0, 0 0 2 0, 0 0 3 0;
