--- a/src/main/resources/screens/style/Game.css
+++ b/src/main/resources/screens/style/Game.css
@@ -68,6 +68,39 @@
     #d86e3a,
     radial-gradient(center 50% 50%, radius 100%, #d86e3a, #c54e2c);
     /* -fx-effect: dropshadow(two-pass-box, black, 20, 0.1, 0, 0);*/
+}
+
+#lifeBar {
+    -fx-padding: 4 10 10 10;
+    -fx-background-insets: 0, 0, 0 0 3 0, 0 0 4 0;
+    -fx-background-radius: 10;
+    -fx-background-color: linear-gradient(from 0% 93% to 0% 100%, #a34313 0%, #903b12 100%),
+    #9d4024,
+    #d86e3a,
+    radial-gradient(center 50% 50%, radius 100%, #d86e3a, #c54e2c);
+}
+
+#lifeBar > .track {
+    -fx-background-radius: 10;
+    -fx-background-color: linear-gradient(
+            from 0em 0.75em to 0.75em 0px,
+            repeat,
+            -fx-accent 0%,
+            -fx-accent 49%
+    );
+}
+
+#lifeBar > .bar {
+    -fx-background-insets: 0, 0, 0 0 2 0, 0 0 3 0;
+    -fx-background-radius: 10;
+    -fx-background-color: linear-gradient(from 0% 93% to 0% 100%, #a34313 0%, #903b12 100%),
+    #9d4024,
+    #d86e3a,
+    radial-gradient(center 50% 50%, radius 100%, #d86e3a, #c54e2c);
 
 }
+
+
+
+
 
