--- a/src/main/resources/screens/Game.fxml
+++ b/src/main/resources/screens/Game.fxml
@@ -4,40 +4,58 @@
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.*?>
-<BorderPane id="root" fx:id="root" minHeight="800.0" minWidth="700.0" stylesheets="@style/Game.css"
-            xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
+
+<BorderPane id="root" fx:id="root" minHeight="800.0" minWidth="700.0" stylesheets="@style/Game.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
     <center>
         <StackPane id="canvasStack" fx:id="canvasStack">
             <children>
-                <Canvas id="canvasGame" fx:id="canvas" height="500.0" width="600.0"/>
+                <Canvas id="canvasGame" fx:id="canvas" height="500.0" width="600.0" />
             </children>
         </StackPane>
     </center>
     <bottom>
         <HBox alignment="CENTER" spacing="20.0" BorderPane.alignment="CENTER">
             <children>
-                <Button id="Button" fx:id="buttonStart" mnemonicParsing="false"/>
+                <Button id="Button" fx:id="buttonStart" mnemonicParsing="false" />
             </children>
             <padding>
-                <Insets bottom="10.0"/>
+                <Insets bottom="10.0" />
             </padding>
         </HBox>
     </bottom>
     <top>
         <BorderPane BorderPane.alignment="CENTER">
             <left>
-                <Button id="Button" fx:id="buttonBack" mnemonicParsing="false" BorderPane.alignment="CENTER"/>
+            <HBox alignment="CENTER_LEFT" maxWidth="250.0" minWidth="250.0" BorderPane.alignment="CENTER">
+               <children>
+                      <Button id="Button" fx:id="buttonBack" mnemonicParsing="false" />
+               </children>
+            </HBox>
             </left>
-            <top>
-                <Label id="LevelTitle" fx:id="labelTitle" text="Level" BorderPane.alignment="CENTER"/>
-            </top>
             <right>
-                <Label id="ScoreTitle" fx:id="labelScore" text="Score" BorderPane.alignment="BASELINE_RIGHT"/>
+            <HBox alignment="CENTER_RIGHT" maxWidth="250.0" minWidth="250.0" BorderPane.alignment="CENTER">
+               <children>
+                      <Label id="ScoreTitle" fx:id="labelScore" contentDisplay="CENTER" text="Score" />
+               </children>
+            </HBox>
             </right>
             <BorderPane.margin>
-                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                <Insets left="5.0" right="5.0" />
             </BorderPane.margin>
+         <top>
+                <Label id="LevelTitle" fx:id="labelTitle" text="Level" BorderPane.alignment="CENTER" />
+         </top>
+         <center>
+            <ProgressBar id="lifeBar" fx:id="lifeBar" maxHeight="40.0" minHeight="40.0" progress="0.64" BorderPane.alignment="CENTER">
+               <BorderPane.margin>
+                  <Insets top="10.0" />
+               </BorderPane.margin>
+            </ProgressBar>
+         </center>
         </BorderPane>
     </top>
 </BorderPane>
