--- a/src/main/resources/screens/Lobby.fxml
+++ b/src/main/resources/screens/Lobby.fxml
@@ -45,7 +45,8 @@
                <children>
                   <HBox alignment="CENTER" spacing="15.0">
                      <children>
-                        <SplitMenuButton id="DropMenu" fx:id="dropMenuDifficult" disable="true" mnemonicParsing="false" text="Diffuculties" textFill="#c8c2da">
+                        <Label text="Diffuculties:" textFill="#b2aaaa" />
+                        <SplitMenuButton id="DropMenu" fx:id="dropMenuDifficult" disable="true" mnemonicParsing="false" text="1" textFill="#c8c2da">
                           <items>
                             <MenuItem mnemonicParsing="false" text="Action 1" />
                             <MenuItem mnemonicParsing="false" text="Action 2" />
@@ -54,7 +55,8 @@
                               <Font size="11.0" />
                            </font>
                         </SplitMenuButton>
-                        <SplitMenuButton id="DropMenu" fx:id="dropMenuLevel" disable="true" mnemonicParsing="false" text="Level" textFill="#c8c2da">
+                        <Label text="Level:" textFill="#b2aaaa" />
+                        <SplitMenuButton id="DropMenu" fx:id="dropMenuLevel" disable="true" mnemonicParsing="false" text="1" textFill="#c8c2da">
                            <items>
                               <MenuItem mnemonicParsing="false" text="Action 1" />
                               <MenuItem mnemonicParsing="false" text="Action 2" />
